height and overflow are fixed

--- a/src/app/shared/components/page-wrapper/page-wrapper.component.scss
+++ b/src/app/shared/components/page-wrapper/page-wrapper.component.scss
@@ -6,6 +6,7 @@
 		padding: calc(3 * var(--offset));
 		background-color: var(--white);
 		border-radius: var(--offset-xs);
-		height: 100vh;
+		height: calc(100vh - 2*var(--offset-l));
+		overflow-y: scroll;
 	}
 }
